fix overflow problem

--- a/style.css
+++ b/style.css
@@ -33,12 +33,17 @@ html, body {
     --fourth-color: #b30707;
 }
 
+html {
+    overflow-y:hidden;
+}
+
 body {
     background-image: url('../portfolio_axel/assets/images/background.jpg');
     color: #ffffff;
     min-height: 100dvh;
     height: 100dvh;
     background-color: black;
+
 }
 
 
